--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <div class="physioHelpsCards">
                     <div class="physioHelpsCard cardOne moveRight">
                         <div class="physioHelpsCardIcon">
-                            <img src="src/run.svg" height="100%">
+                            <img src="src/pain.svg" height="100%">
                             <div class="physioHelpsCardIconBG"></div>
                         </div>
                         <div class="physioHelpsCardHeadline">Schmerzlinderung</div>
@@ -155,7 +155,7 @@
                     </div>
                     <div class="physioHelpsCard moveRight">
                         <div class="physioHelpsCardIcon">
-                            <img src="src/run.svg" height="100%">
+                            <img src="src/running.png" height="100%">
                             <div class="physioHelpsCardIconBG"></div>
                         </div>
                         <div class="physioHelpsCardHeadline">Verbesserung der Mobilität</div>
@@ -178,7 +178,6 @@
                     <div class="newLeistungenLeftInner">
                         <h2>Unsere</h2>
                         <h5>Anwendungen</h5>
-                        <div class="line"></div>
                         <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
                             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
                         <button class="justAButton">mehr erfahren</button>
@@ -187,10 +186,12 @@
                 <div class="newLeistungenRight">
                     <div class="leistungenRightGrid">
                         <div class="newLeistungen-card opacityReveal">
-                            <img src="src/frederikEditLowQ.jpg">
+                            <img src="src/IMG_3945.JPG">
                             <div class="newLeistungen-cardText">
                                 <div class="newLeistungen-cardTextHeadline">
-                                    <div class="iconi"><img src="src/run.svg"></div>
+                                    <div class="iconi">
+                                        <img src="src/run.svg">
+                                    </div>
                                     <h3><i>Vielseitige<br>
                                             Therapieverfahren</i></h3>
                                 </div>
@@ -198,16 +199,32 @@
                             </div>
                         </div>
                         <div class=" newLeistungen-card opacityReveal">
-                            <img src="src/frederikEditLowQ.jpg">
+                            <img src="src/training2.jpg">
                             <div class="newLeistungen-cardText">
-                                <div class="newLeistungen-cardTextHeadline">Effektives<br> Coaching</div>
+                                <div class="newLeistungen-cardTextHeadline">
+                                    <div class="iconi">
+                                        <img src="src/running.png">
+                                    </div>
+                                    <h3><i>Professionelle<br>
+                                            Fitnessberatung</i></h3>
+                                </div>
+                                <p>• Erstellung von Fitnessplänen<br>
+                                    • gemeinsames Training<br>
+                                    • Personal Training<br></p>
                             </div>
                         </div>
 
                         <div class="newLeistungen-card opacityReveal">
-                            <img src="src/frederikEditLowQ.jpg">
+                            <img src="src/anatomie.JPG">
                             <div class="newLeistungen-cardText">
-                                <div class="newLeistungen-cardTextHeadline">Professionnelle<br>Fitnessberatung</div>
+                                <div class="newLeistungen-cardTextHeadline">
+                                    <div class="iconi">
+                                        <img src="src/running.png">
+                                    </div>
+                                    <h3><i>Effektives<br>
+                                            Coaching</i></h3>
+                                </div>
+                                <p>im Bereich Schmerzpsychologie und Wahrnehmung</p>
                             </div>
                         </div>
                         <div class="newLeistungen-card opacityReveal">
@@ -322,7 +339,49 @@
                 </div>
                 <div class="contactRightBG"></div>
                 <div class="contactRight">
-                    <h5>Kontaktieren Sie mich</h5>
+                    <h5>Kontakt</h5>
+
+                    <div class="contactRight-cardWrapper">
+                        <div class="contactRight-cardHeadline">
+                            <h3>Telefon</h3>
+                        </div>
+                        <div class="contactRight-card">
+                            <div class="contactRight-cardIcon">
+                                <i class="fa-solid fa-phone-volume" aria-hidden="true"></i>
+                            </div>
+                            <div class="contactRight-cardContent">
+                                <p>023182348 581858</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contactRight-cardWrapper">
+                        <div class="contactRight-cardHeadline">
+                            <h3>Telefon</h3>
+                        </div>
+                        <div class="contactRight-card">
+                            <div class="contactRight-cardIcon">
+                                <i class="fa-solid fa-phone-volume" aria-hidden="true"></i>
+                            </div>
+                            <div class="contactRight-cardContent">
+                                <p>023182348 581858</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="contactRight-cardWrapper">
+                        <div class="contactRight-cardHeadline">
+                            <h3>Telefon</h3>
+                        </div>
+                        <div class="contactRight-card">
+                            <div class="contactRight-cardIcon">
+                                <i class="fa-solid fa-phone-volume" aria-hidden="true"></i>
+                            </div>
+                            <div class="contactRight-cardContent">
+                                <p>023182348 581858</p>
+                            </div>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
         </section>
